--- a/Install
+++ b/Install
@@ -2193,6 +2193,7 @@ echo " Installing standard databases. This may take some time."
   cp ${DATdir}/databases/material.db3.a ${DESTdir}/esp-r/databases/material.db3.a
   cp ${DATdir}/databases/material.db4.a ${DESTdir}/esp-r/databases/material.db4.a
   cp ${DATdir}/databases/CFClayers.db1.a ${DESTdir}/esp-r/databases/CFClayers.db1.a
+  cp ${DATdir}/databases/CFClayers.db2.a ${DESTdir}/esp-r/databases/CFClayers.db2.a
 
   cp ${DATdir}/databases/SBEM.db1 ${DESTdir}/esp-r/databases/SBEM.db1
   cp ${DATdir}/databases/UK_notional.constrdb ${DESTdir}/esp-r/databases/UK_notional.constrdb
