Adapt install script and main Makefile to allow for correct compile & install on OS X.

--- a/Install
+++ b/Install
@@ -2034,7 +2034,9 @@ cd ${SRCdir}
 if [ "$debugging" = "no" ]; then
   make ESPdir=${ESPdir} EXE=${EXE} COSIMDir=${COSIMdir} strip  >/dev/null 2>&1
 fi
-make ESPBinDir=${ESPBinDir} EXE=${EXE} COSIMDir=${COSIMdir} InstBins ${targets}  >/dev/null 2>&1
+#make ESPBinDir=${ESPBinDir} EXE=${EXE} COSIMDir=${COSIMdir} InstBins ${targets}  >/dev/null 2>&1
+make ESPBinDir=${ESPBinDir} EXE=${EXE} COSIMDir=${COSIMdir} bincopy
+
 if [ "$clean" = "yes" ]; then
   make EXE=${EXE} clean  >/dev/null 2>&1
 fi
@@ -2087,7 +2089,7 @@ elif [ ${MCTYPE} = mingw ]; then
 fi
 
 # Temporary.
-ln -sf ${ESPdir}/bin/mrt ${ESPdir}/bin/vwf
+ln -sf ${ESPdir}/bin/espvwf ${ESPdir}/bin/vwf
 
 echo " "
 echo " Installation complete."
