--- a/Install
+++ b/Install
@@ -19,7 +19,7 @@ COSIMdir=" "		        # Harmonizer installation directory.
 
 # Compilation settings.
 mode="interactive"         # Provide feedback during installation. 
-xml_support="no"           # Support for XML output.
+xml_support="yes"          # Support for XML output.
 SQLite_support="no"        # Support for SQLite output.
 FMI_support="no"           # Support for FMI connectivity.
 debugging="no"             # Support for debugging symbols.
@@ -43,7 +43,7 @@ extendedDebug="no"         # Extended debugging.
 use_intel="no"             # Use Intel compilers.
 skip_ish_calcs="no"        # Binary shading file creation.
 reuse_ish_calcs="yes"      # Map ascii shading files to binary.
-clean="no"                # Clean object files after compilation.
+clean="no"                 # Clean object files after compilation.
 unversioned="no"           # Check for versioning info.
 
 # ESP-r executables (bld & plt not included by default because their
